cache_diff/tests/fails/missing_display.stderr
error[E0277]: `NotDisplay` doesn't implement `std::fmt::Display`
 --> tests/fails/missing_display.rs:5:10
  |
5 | #[derive(CacheDiff)]
  |          ^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `std::fmt::Display` is not implemented for `NotDisplay`
 --> tests/fails/missing_display.rs:3:1
  |
3 | struct NotDisplay;
  | ^^^^^^^^^^^^^^^^^
  = note: required for `&NotDisplay` to implement `std::fmt::Display`
note: required by a bound in `fmt_value`
 --> src/lib.rs
  |
  |     fn fmt_value<T: std::fmt::Display>(&self, value: &T) -> String {
  |                     ^^^^^^^^^^^^^^^^^ required by this bound in `CacheDiff::fmt_value`
  = note: this error originates in the derive macro `CacheDiff` (in Nightly builds, run with -Z macro-backtrace for more info)
